2014-01-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-canonical-hosts, bbdb-canonicalize-mail-1)
	(bbdb-message-clean-name-default): Move here from bbdb-mua.el.

2014-01-08  Roland Winkler  <winkler@gnu.org>
	Provide auto completion for cities, states and countries known to
	BBDB.
	* lisp/bbdb.el (bbdb-city-list, bbdb-state-list)
	(bbdb-country-list): New internal variables.
	(bbdb-add-to-list): New function.
	(bbdb-puthash, bbdb-merge-concat-remove-duplicates)
	(bbdb-change-record): Use add-to-list.
	(bbdb-record-set-xfield, bbdb-parse-records): Use add-to-list and
	bbdb-add-to-list.  Collect cities, states and countries known to
	BBDB.
	* lisp/bbdb-com.el (bbdb-record-edit-address)
	(bbdb-edit-address-default): Provide auto completion for cities,
	states and countries.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Update copyright year in all files.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Avoid hard-coded references to xfield notes.
	* lisp/bbdb.el (bbdb-default-xfield, bbdb-edit-foo)
	(bbdb-annotate-field, bbdb-mua-edit-field): New variables.
	(bbdb-auto-notes-rules): Fix docstring.
	* lisp/bbdb-com.el (bbdb-edit-foo): New command.
	(bbdb-search, bbdb-read-record): Use bbdb-default-xfield.
	(bbdb-insert-field): Do not handle initial value.
	(bbdb-prompt-for-new-field): Replace arg init by arg record to
	handle initial value here.
	* lisp/bbdb.el (bbdb-insert-field-menu): Change accordingly.
	* lisp/bbdb-mua.el (bbdb-annotate-record): Use
	bbdb-annotate-field.  Allow empty strings for removing an xfield.
	(bbdb-mua-annotate-field-interactive): New function.
	(bbdb-mua-annotate-sender, bbdb-mua-annotate-recipients): Use it.
	New optional arg field.
	(bbdb-mua-edit-field-interactive, bbdb-mua-edit-field)
	(bbdb-mua-edit-field-sender, bbdb-mua-edit-field-recipients): Use
	variable bbdb-mua-edit-field.
	(bbdb-mua-edit-field-recipients): Use bbdb-default-xfield.
	* lisp/bbdb-snarf.el (bbdb-snarf-notes): Use bbdb-default-xfield.
